--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-modal": "^3.16.1"
-    "mysql2": "^3.6.3",
+    "react-modal": "^3.16.1",
+    "mysql2": "^3.6.3"
   },
   "devDependencies": {
     "@types/node": "^20",
