--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "argon2": "^0.31.2",
     "axios": "^1.6.1",
-    "mysql2": "^3.6.3",
     "next": "14.0.1",
     "react": "^18",
     "react-calendar": "^4.6.1",
     "react-dom": "^18",
     "react-modal": "^3.16.1"
-},
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "prisma": "^5.6.0",
     "typescript": "^5"
   }
 }
