--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.6.0",
     "argon2": "^0.31.2",
     "axios": "^1.6.1",
+    "cookies-next": "^4.1.0",
     "next": "14.0.1",
     "react": "^18",
     "react-calendar": "^4.6.1",
