--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-calendar": "^4.6.1",
+    "react-calendar-datetime-picker": "^1.7.4",
     "react-dom": "^18",
     "react-modal": "^3.16.1"
   },
