--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-datetime-picker": "^5.5.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
