--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.1",
     "cookies-next": "^4.1.0",
     "next": "14.0.1",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-calendar": "^4.6.1",
     "react-calendar-datetime-picker": "^1.7.4",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
